--- a/src/main/resources/static/HTML/index.html
+++ b/src/main/resources/static/HTML/index.html
@@ -7,7 +7,30 @@
     <link rel="stylesheet" href="/src/main/resources/static/CSS/index.css">
 </head>
 <body>
-    <h1>hey body</h1>
-    <h2></h2>
+    <header class="header">
+        <nav class="navbar">
+            <a href="index.html" class="nav-logo">ODDWEBSITE.</a>
+            <ul class="nav-menu">
+                <li class="nav-item">
+                    <a href="omOs.html" class="nav-link">Om os</a>
+                </li>
+                <li class="nav-item">
+                    <a href="portfolio.html" class="nav-link">Portfolio</a>
+                </li>
+                <li class="nav-item">
+                    <a href="voresBaggrund.html" class="nav-link">vores baggrund</a>
+                </li>
+                <li class="nav-item">
+                    <a href="kontaktOs.html" class="nav-link">kontakt os</a>
+                </li>
+            </ul>
+            <div class="hamburger">
+                <script src="script.js"></script>
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </div>
+        </nav>
+</header>
 </body>
 </html>
